fix header card overlay margins on mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -7244,32 +7244,33 @@ nav.breadcrumb {
     margin-right: -0.9375rem;
     margin-left: -0.9375rem; } }
 
-.card.header-card-overlay .card-title-wrap {
-  background: #333;
-  padding: 32px;
-  padding: 2rem; }
-  .card.header-card-overlay .card-title-wrap.card-title-wrap-link:after {
-    content: none; }
-  .card.header-card-overlay .card-title-wrap.card-title-wrap-link .card-title {
-    text-transform: none;
-    color: #fff; }
-  .card.header-card-overlay .card-title-wrap.card-title-wrap-link .card-text {
-    font-family: "ArialLight", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #fff; }
-
-@media (min-width: 768px) {
-  .card.header-card-overlay {
-    margin-top: -5rem; }
-    .card.header-card-overlay .card-title-wrap {
-      width: 100%;
-      bottom: 0;
-      top: auto;
-      left: 0;
-      padding: 3rem 2rem 2rem;
-      background: rgba(0, 0, 0, 0.75);
-      background: linear-gradient(transparent, rgba(0, 0, 0, 0.8)); }
-      .card.header-card-overlay .card-title-wrap.card-title-wrap-link {
-        padding: 3rem 2rem 2rem; } }
+.card.header-card-overlay {
+  margin-top: 0; }
+  .card.header-card-overlay .card-title-wrap {
+    background: #333;
+    padding: 32px;
+    padding: 2rem; }
+    .card.header-card-overlay .card-title-wrap.card-title-wrap-link:after {
+      content: none; }
+    .card.header-card-overlay .card-title-wrap.card-title-wrap-link .card-title {
+      text-transform: none;
+      color: #fff; }
+    .card.header-card-overlay .card-title-wrap.card-title-wrap-link .card-text {
+      font-family: "ArialLight", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      color: #fff; }
+  @media (min-width: 768px) {
+    .card.header-card-overlay {
+      margin-top: -5rem; }
+      .card.header-card-overlay .card-title-wrap {
+        width: 100%;
+        bottom: 0;
+        top: auto;
+        left: 0;
+        padding: 3rem 2rem 2rem;
+        background: rgba(0, 0, 0, 0.75);
+        background: linear-gradient(transparent, rgba(0, 0, 0, 0.8)); }
+        .card.header-card-overlay .card-title-wrap.card-title-wrap-link {
+          padding: 3rem 2rem 2rem; } }
 
 @media (min-width: 768px) {
   .show-departmental-menu .card.header-card-overlay {
