--- a/scss/components/cards/header-card-overlay.scss
+++ b/scss/components/cards/header-card-overlay.scss
@@ -1,5 +1,7 @@
 .card.header-card-overlay {
 
+	margin-top: 0;
+
 	.card-title-wrap {
 		background: #333;
 		padding: 2rem;
